# lo3

./: .gitattributes  .gitignore  2  CMakeCache.txt  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  Main  README.md  SECURITY.md  cmake_install.cmake  plugin.info  test.lo3
.github/workflows/: compile-check.yml  release.yml
build-wasm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-wasm/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: additional-naming.h  cli.h  core.h  global.h  lo3.h  specific-language.h  var.h  version.h.in
lib/: core.h
src/: cli.c  control-flow.c  execute.c  global.c  lo3-getLine.c  main.c  parsing.c  var.c  warnings.c  wasm_exports.c
src/internal/: additional-naming.h  bare-define.h  bare-var.h  cli.h  control-flow.h  core.h  global.h  specific-language.h
test/: CMakeLists.txt  run_tests.py
test/unit/: test_control_flow.c  test_execute.c  test_global.c  test_var.c  test_warnings.c
